Залив перед мержем

--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="styles.e193a920f89b11d6dac9.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.7b7408b801ff976258f9.js"></script><script type="text/javascript" src="es2015-polyfills.0a4d3eb5b680939663ec.js" nomodule></script><script type="text/javascript" src="polyfills.11b44398b075dad4d051.js"></script><script type="text/javascript" src="main.c310a837356bcf962e41.js"></script></body>
+<script type="text/javascript" src="runtime.ec8238a6525d186c81d0.js"></script><script type="text/javascript" src="es2015-polyfills.0a4d3eb5b680939663ec.js" nomodule></script><script type="text/javascript" src="polyfills.11b44398b075dad4d051.js"></script><script type="text/javascript" src="main.d4950adb6d56e551e5df.js"></script></body>
 </html>
