--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Wwwroot</title>
+  <title>SushiWorldApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.e193a920f89b11d6dac9.css"></head>
+  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
+  
+<link rel="stylesheet" href="styles.54f07ba965070787be5e.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.bf76a88e14fe98673db9.js"></script><script type="text/javascript" src="es2015-polyfills.0a4d3eb5b680939663ec.js" nomodule></script><script type="text/javascript" src="polyfills.11b44398b075dad4d051.js"></script><script type="text/javascript" src="main.e37895d47513d560fc94.js"></script></body>
+
+<script src="runtime-es2015.da99b1ceb73071898b66.js" type="module"></script><script src="polyfills-es2015.3d5c9d6e99ad1936257a.js" type="module"></script><script src="runtime-es5.3eac158949e3e86f16d8.js" nomodule></script><script src="polyfills-es5.c95bbcba2163367f6190.js" nomodule></script><script src="main-es2015.4a24233fd45563efe655.js" type="module"></script><script src="main-es5.c4814fb7625de7416589.js" nomodule></script></body>
 </html>
