--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -14,5 +14,5 @@
 <body>
   <app-root></app-root>
 
-<script src="runtime-es2015.da99b1ceb73071898b66.js" type="module"></script><script src="polyfills-es2015.3d5c9d6e99ad1936257a.js" type="module"></script><script src="runtime-es5.3eac158949e3e86f16d8.js" nomodule></script><script src="polyfills-es5.c95bbcba2163367f6190.js" nomodule></script><script src="main-es2015.4a24233fd45563efe655.js" type="module"></script><script src="main-es5.c4814fb7625de7416589.js" nomodule></script></body>
+<script src="runtime.a72e4ae90127fdcf5e34.js"></script><script src="polyfills-es5.f3e7d150edf570bb3edf.js" nomodule></script><script src="polyfills.1488c3694e4a68b68bb7.js"></script><script src="main.d1a565b137706f7b115c.js"></script></body>
 </html>
