Добалены сортировки на страницу контролёра по дате(интервалом), по названию, по номеру, по напралению

--- a/WebUI/ClientApp/src/index.html
+++ b/WebUI/ClientApp/src/index.html
@@ -10,8 +10,10 @@
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
   
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="igx-typography">
   <app-root></app-root>
 
 </body>
