в курупные клиенты добюален столбец План задачи РМ и Поан задач МС

--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -10,9 +10,11 @@
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
   
-<link rel="stylesheet" href="styles.71924668efd9ff6be3e3.css"></head>
-<body>
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.ef961c0b094e421f3676.css"></head>
+<body class="igx-typography">
   <app-root></app-root>
 
-<script src="runtime.87fd420c74d7d6ef8960.js"></script><script src="polyfills-es5.f2d86d4910a60a141149.js" nomodule></script><script src="polyfills.514a252ed26d181eb162.js"></script><script src="main.ce67a4c03aba552a7d42.js"></script></body>
+<script src="runtime.bcff5c475d07794f7b15.js"></script><script src="polyfills-es5.f2d86d4910a60a141149.js" nomodule></script><script src="polyfills.0a1f7db38f338842d03b.js"></script><script src="main.62197204d32797bfc519.js"></script></body>
 </html>
