Подпралены алгоритмы таюлици ЭФФЕКТИВНОСТИ МЕНЕДЖЕРА

--- a/WebUI/ClientApp/src/index.html
+++ b/WebUI/ClientApp/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SushiWorldApp</title>
+  <title>Мир Суши</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/Icon/logo1-min-ru.png">
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
   
