--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SushiWorldApp</title>
+  <title>Мир Суши</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/Icon/logo1-min-ru.png">
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
   
@@ -16,5 +16,5 @@
 <body class="igx-typography">
   <app-root></app-root>
 
-<script src="runtime.32128931049e697a7eee.js"></script><script src="polyfills-es5.f2d86d4910a60a141149.js" nomodule></script><script src="polyfills.0a1f7db38f338842d03b.js"></script><script src="main.8b85367c82d43c8f51e7.js"></script></body>
+<script src="runtime.bfc79fd9212db73081f4.js"></script><script src="polyfills-es5.f2d86d4910a60a141149.js" nomodule></script><script src="polyfills.0a1f7db38f338842d03b.js"></script><script src="main.8b85367c82d43c8f51e7.js"></script></body>
 </html>
